2012-07-04  Julien Bect  <julien.bect@supelec.fr>

	Improved doc and added tests in several functions. Also, fixed a
	minor bug in stk_model().

	* examples/example07.m: fixed comment
	* utils/stk_model.m: bugfix + doc + tests
	* paramestim/stk_remlqrg.m: doc + tests
	* paramestim/stk_param_estim.m: doc + tests

2012-06-30  Julien Bect  <julien.bect@supelec.fr>

	Fixed a bug in stk_runtests() under Octave. It is now possible to
	write "stk_runtests core" from the STK's root, for instance.

	* misc/test/stk_runtests.m: bugfix.

	Added a new function for approximate comparisons.

	* misc/test/stk_isequal_tolrel.m: new function.
	* core/stk_predict.m: modified test.

	Miscellaneous.

	* misc/error/stk_narginchk.m: fixed doc and comments.
	* core/stk_ortho_func.m: tests.
	* core/stk_make_matcov.m: idem.

2012-06-29  Julien Bect  <julien.bect@supelec.fr>

	A first series of Octave-style unit tests.

	* core/stk_predict.m: modified
	* sampling/stk_sampling_maximinlhs.m: modified
	* misc/dist/stk_distance_matrix.m: new function
	* misc/dist/stk_mindist.m: new function

	Modified STK's path handling. A separate function stk_path() has
	been created, since stk_set_root() is no longer the only function
	that needs it. Also, several new folders have been added to the
	path.

	* misc/config/stk_set_root.m: modified
	* misc/config/stk_path.m: new function

	Imported and adapted Octave's unit testing functions.

	* misc/test: new folder
	* misc/test/stk_test.m: new function
	* misc/test/stk_runtests.m: new function

	Removed old test scripts (the tests that they contained are now
	included as Octave-style unit tests in the M-file themselves).

	* tests: deleted
	* tests/test_distance_matrix.m: idem
	* tests/test_sampling_maximinlhs.m: idem
	* tests/test_Kx_cache.m: idem
	* tests/test_mindist.m: idem

	Added new functions for improved error handling.

	* misc/error: new folder
	* misc/error/stk_narginchk.m: new function
	* misc/error/stk_error.m: new function
